--- a/style.scss
+++ b/style.scss
@@ -73,6 +73,7 @@ body{
     background-color: $gray;
     font-family: 'Courier Prime', monospace;
     animation-name: body_loader;
+    overflow: hidden;
 }
 
 
@@ -150,6 +151,7 @@ header{
     i{
         margin-right: 10px;
         opacity: 0.5;
+        transition-duration: 0.5s;
     }
     ul{
         display: flex;
@@ -175,6 +177,9 @@ header{
                 border-bottom: 2px solid $survol;
                 color: $survol;
                 font-weight: bolder;
+            }
+            &:hover i{
+                margin-right: 20px;
             }
         }
     }
@@ -577,11 +582,23 @@ main{
         width: 100%;
         margin-bottom: 50px;
     }
+    body{
+        max-width: 100vw;
+        overflow-x: hidden;
+        overflow-y: scroll;
+    }
 }
 
 
 // Responsive ipad et smartphone
 @media (max-width: 1080px) { 
+
+    body{
+        max-width: 100vw;
+        overflow-x: hidden;
+        overflow-y: scroll;
+    }
+
     header{
         nav{
             display: none;
