--- a/style.css
+++ b/style.css
@@ -219,6 +219,7 @@ header:hover {
   opacity: 0.5;
   -webkit-transition-duration: 0.5s;
           transition-duration: 0.5s;
+  color: #70a9ff;
 }
 
 .nav ul {
