--- a/style.scss
+++ b/style.scss
@@ -152,6 +152,7 @@ header{
         margin-right: 10px;
         opacity: 0.5;
         transition-duration: 0.5s;
+        color: lighten($survol, 10%);
     }
     ul{
         display: flex;
