--- a/style.scss
+++ b/style.scss
@@ -112,6 +112,7 @@ header{
         @extend %center_flex;
         cursor: pointer;
         border-bottom: 2px solid gray;
+        background-color: darken($gray, 3%);
     }
     ul{
         height: 90%;
@@ -121,9 +122,11 @@ header{
         padding-left: 30px;
         i{
             margin-right: 40px;
+            transform: rotate(15deg);
         }
+
         li{
-            height: 10%;
+            height: 13%;
             cursor: pointer;
             &:hover{
                 color: $survol;
